--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -42,11 +42,11 @@
 
   <div class="form-group">
     <label for="pass1">Choose a password</label>
-    <input type="password" class="form-control" id="pid1" name="epass1" placeholder="Choose Your Password" required>
+    <input type="password" class="form-control" id="pid1" name="pid1" placeholder="Choose Your Password" required>
   </div>
   <div class="form-group">
     <label for="pass2">Confirm Password</label>
-    <input type="password" class="form-control" id="pid2" name="epass2" placeholder="Enter your password again" required>
+    <input type="password" class="form-control" id="pid2" name="pid2" placeholder="Enter your password again" required>
   </div>
  
   <button type="submit" class="btn btn-primary">Submit</button>
