user login signup and merging 3 login points

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
         
         <div class="text-end">
           <button type="button" class="btn btn-outline-light me-2"><a href="/login">login</a></button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button type="button" class="btn btn-warning"> <a href="/nusignup">Sign-up</a> </button>
         </div>
         {% endif %}
       </div>
