--- a/templates/home/loginpage.html
+++ b/templates/home/loginpage.html
@@ -14,7 +14,7 @@
 
 
 {% block body %}
-<div id="box">
+{% comment %} <div id="box">
 <div class="box">
 <h2>For User</h2>
 
@@ -33,19 +33,19 @@
  
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-</div>
+</div> {% endcomment %}
 <div class="box">
 <h2>For Employee</h2>
 <form action="/loginemp" method="POST">
     {% csrf_token %}
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Username</label>
-    <input type="text" name="empusername" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="text" name="uusername" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" name="emppassword" class="form-control" id="exampleInputPassword1">
+    <input type="password" name="upassword" class="form-control" id="exampleInputPassword1">
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
