--- a/templates/base.html
+++ b/templates/base.html
@@ -56,9 +56,28 @@
     </div>
   </header>
 
-  {% block body %} {% endblock body %} 
 
-  {% block js %} {% endblock js %}
+      
+
+  {% block body %}
+  
+       
+      
+  
+  
+   {% endblock body %} 
+  
+
+  {% block js %}
+
+  <script>
+
+  </script>
+  
+   {% endblock js %}
+
+
+ 
 </body>
 
 </html>
