--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -33,6 +33,8 @@ Profile:-
 {{p.dateofdischarge}}<br><hr>
 {{p.age}}<br><hr>
 {{p.Added_by_email}}<br><hr>
+Added by
+{{p.Addedby_Username}}<br><hr>
 {% endif %}
 
 {% if p.group == "Website_Admins"  %}
