--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="p-3 bg-dark text-white">
+  <header class="p-3 bg-dark text-white" >
     <div id="navbar" class="container">
       <div id="navbar2" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -25,7 +25,7 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" id="List">
-          <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+          <li><a href="/" class="nav-link px-2 text-secondary text-">Home</a></li>
           <li><a href="/covidupdates" class="nav-link px-2 text-white">Covid Updates</a></li>
           <li><a href="/donors" class="nav-link px-2 text-white">Donors</a></li>
         
