--- a/templates/home/Add_H_admin.html
+++ b/templates/home/Add_H_admin.html
@@ -66,6 +66,9 @@
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
+  {% for uu in u %}
+  {{uu}}
+  {% endfor %}
 
 
  {% endblock %}
