--- a/templates/home/Add_H_admin.html
+++ b/templates/home/Add_H_admin.html
@@ -4,11 +4,12 @@
      {% block css %}  
   <style>
       #box{
-          display: flex;
-          justify-content: center;
+          max-width: 500px;
+         margin: auto;
       }
       .box{
-          width: 20%;
+          
+
           margin: 10px 10px;
       }
   </style>{% endblock css %}
@@ -78,3 +79,6 @@
 
 
  {% endblock %}
+ {% block js %}
+
+ {% endblock js %}
