--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -15,7 +15,8 @@ Author:- {{post.author}} <br>
 Time:-{{post.Timestamp}} <br>
 sno:-{{post.sno}} <br>
 Content:- {{post.content}}<br>
-<a href="/blog/{{post.sno}}">Read more</a> <hr> <hr>
+<a href="/blog/{{post.sno}}">Read more</a> <br><br>
+
 
 
 {% endfor %}
