--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,43 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>{% block title %} {% endblock title %}</title>
+  {% block Topjs %} {% endblock Topjs %}
+
   {% block css %} {% endblock css %}
+  <style>
+    *{
+      padding: 0;
+      margin: 0;
+      z-index: 1;
+    }
+    #body{
+    z-index: -200;
+    }
+
+  
+      canvas{
+            /* position: absolute; */
+            z-index: -1;
+             width: 100%; 
+             background-image: linear-gradient( rgb(255, 183, 183), rgb(139, 249, 255)); 
+    opacity: 0.24;
+        }
+        .bg{
+          height: 140vh;
+      position: absolute;
+
+          width: 100vw;
+          z-index: -100;
+          background-image: linear-gradient( rgb(255, 183, 183), rgb(139, 249, 255)); 
+        opacity: 0.3;}
+
+        a{
+          text-decoration: none;
+          color: white;
+          font: weight 9px;
+        }
+   
+  </style>
   
 
 
@@ -46,11 +82,13 @@
         </form> {% endcomment %}
         {% if request.user.is_authenticated %}
         
-        <a href="/profile">{{request.user}}</a>
+    <a href="/profile" class="btn btn-info">{{request.user}}</a>
+
         {% else %}
         
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2"><a href="/login">login</a></button>
+        
+          <button type="button" class="btn btn-info"><a href="/login">login</a></button>
           <button type="button" class="btn btn-warning"> <a href="/nusignup">Sign-up</a> </button>
         </div>
         {% endif %}
@@ -59,16 +97,20 @@
   </header>
 
   
- 
-
   
-  <div id="body">
+  
+    <div class="bg">
+
+      <canvas></canvas>
+
+    </div>
+  
     
+  
     
     {% block body %}
     
     {% endblock body %} 
-  </div>
   
   
   
@@ -76,6 +118,139 @@
    
    {% block js %}
    {% endblock js %}
+   
+<script>
+
+    var canvas = document.querySelector('canvas');
+
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    var c = canvas.getContext('2d');
+
+    // Animation
+
+    var mouse = {
+        x: undefined,
+        y: undefined
+    }
+
+    var maxRadius = 50;
+    // var minRadius = 2;
+
+    var colorArray = [
+        'red',
+        '#BB8D8D',
+        'white',
+        '#D55E5E',
+        '#5E58A2'
+    ];
+    // console.log(colorArray.length);
+
+    window.addEventListener('resize', function () {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        init();
+    });
+
+    window.addEventListener('mousemove', function (event) {
+        // console.log(event);
+        mouse.x = event.x;
+        mouse.y = event.y;
+        console.log(mouse);
+    })
+
+    // fucntion for making circles 
+
+    function Circle(x, y, dx, dy, radius) {
+        this.x = x;
+        this.y = y;
+        this.dx = dx;
+        this.dy = dy;
+        this.radius = radius;
+        this.minRadius = radius;
+        this.color = colorArray[Math.floor(Math.random() * colorArray.length)];
+
+        this.draw = function () {
+            // console.log('krubc');
+            c.beginPath();
+            c.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
+            // c.strokeStyle = 'yellow';
+            // c.stroke();
+            c.fillStyle = this.color;
+            c.fill();
+        }
+
+        this.update = function () {
+            if (this.x + this.radius > innerWidth || this.x - this.radius < 0) {
+                this.dx = -this.dx;
+            }
+
+            if (this.y + this.radius > innerHeight || this.y - this.radius < 0) {
+                this.dy = -this.dy;
+            }
+
+            this.x += this.dx;
+            this.y += this.dy;
+
+            //Interactivity
+            if (mouse.x - this.x < 50 && mouse.x - this.x > -50 && mouse.y - this.y < 50 && mouse.y - this.y > -50) {
+                if (this.radius < maxRadius) {
+                    this.radius += 1;
+                }
+            } else if (this.radius > this.minRadius) {
+                this.radius -= 1;
+            }
+
+            this.draw();
+        }
+
+    }
+
+    var circleArray = [];
+
+
+    // console.log(circleArray);
+
+    // var circle = new Circle(200, 200, 3, 3, 50);
+
+    function init() {
+
+        circleArray = [];
+
+        for (var i = 0; i < 25; i++) {
+            var radius = Math.random() * 4 + 35;
+            var x = Math.random() * (innerWidth - radius * 2) + radius;
+            var y = Math.random() * (innerHeight - radius * 2) + radius;
+            var dx = (Math.random() - 0.5) * 8;
+            var dy = (Math.random() - 0.5) * 8;
+            circleArray.push(new Circle(x, y, dx, dy, radius));
+
+        }
+
+    }
+
+    function animate() {
+
+        // creating a loop using below statement by calling function inside the function itself
+        requestAnimationFrame(animate);
+        // console.log('sdchba');
+
+        c.clearRect(0, 0, innerWidth, innerHeight);
+
+        for (var i = 0; i < circleArray.length; i++) {
+            circleArray[i].update();
+        }
+
+    }
+
+    init();
+
+    animate();
+    
+</script>
+
 
 
 
