--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>{% block title %} {% endblock title %}</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
   {% block links %} {% endblock links %}
 
   {% block Topjs %} {% endblock Topjs %}
@@ -15,6 +18,7 @@
   {% block css %} {% endblock css %}
   <style>
     *{
+      font-family: 'Baloo Bhai 2', cursive;
       padding: 0;
       margin: 0;
       z-index: 1;
