--- a/templates/home/contact_us.html
+++ b/templates/home/contact_us.html
@@ -79,6 +79,7 @@
 </style>
 {% endblock css %}
 
+
 {% block body %}
 
 
@@ -122,7 +123,7 @@
           </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="button2">Submit</button>
+              <button type="submit" class="btn btn-secondary">Submit</button>
             </div>
           </div>
         </div>
