--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -10,6 +10,9 @@
     width: 200px;
     zoom: 1.4;
   }
+  #share{
+  margin: 10px;
+  }
 </style>
 
 
@@ -19,7 +22,7 @@
 
 {% block body %}
 <a href="/blog/addblog">
-  <button type="button" class="btn btn-lg btn-primary" disabled>Share Your Experience</button>
+  <button type="button" id="share" class="btn btn-lg btn-primary">Share Your Experience</button>
 
 </a>
 
