--- a/templates/home/password_reset.html
+++ b/templates/home/password_reset.html
@@ -1,3 +1,37 @@
+{% extends 'base.html' %}
+
+{% block title %}Password Reset{% endblock title %}
+{% block css %}
+<style>
+  #outer {
+    position: relative;
+    top: 20vh;
+  }
+
+  #inner {
+    width: 40%;
+    margin: auto;
+
+
+
+    background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+
+  }
+
+  .box {
+    padding: 20px;
+
+    top: 20%;
+
+  }
+</style>{% endblock css %}
+
+{% block body %}
+<div id="outer">
+<div class="container">
+  <div id="inner">
+<div class="box">
+
 <h3>Password reset</h3>
 
 <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
@@ -6,6 +40,9 @@
 
 	{% csrf_token %}
 	{{form}}
-	<input type="Submit" name="Send email">
+	<input type="Submit" class="btn btn-info" name="Send email">
 	
 </form>
+</div></div>
+</div></div>
+ {% endblock %}
