--- a/templates/home/password_reset_form.html
+++ b/templates/home/password_reset_form.html
@@ -1,3 +1,38 @@
+{% extends 'base.html' %}
+
+{% block title %}Reset Password{% endblock title %}
+{% block css %}
+<style>
+  #outer {
+    position: relative;
+    top: 20vh;
+  }
+
+  #inner {
+    width: 40%;
+    margin: auto;
+
+
+
+    background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+
+  }
+
+  .box {
+    padding: 20px;
+
+    top: 20%;
+
+  }
+</style>{% endblock css %}
+
+{% block body %}
+<div id="outer">
+<div class="container">
+  <div id="inner">
+<div class="box">
+
+
 <h3>Enter new password</h3>
 
 <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
@@ -6,6 +41,10 @@
 
 	{% csrf_token %}
 	{{form}}
-	<input type="Submit" name="Update Password">
+	<input type="Submit" class="btn btn-primary" name="Update Password">
+
 	
 </form>
+</div></div>
+</div></div>
+ {% endblock %}
