--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -43,7 +43,7 @@ Added by
   
   </a> <br>
     <a href="/commentshow">
-   <button type="button" class="btn btn-warning">Comments</button>
+   <button type="button" class="btn btn-warning my-2">Comments</button>
 
   </a> <br>
 
@@ -68,7 +68,7 @@ Added by
   
   </a> <br>
   <a href="/commentshow">
-   <button type="button" class="btn btn-warning">Comments</button>
+   <button type="button" class="btn btn-warning my-2">Comments</button>
 
   </a> <br>
 
