--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -3,6 +3,7 @@
 {% block title %}Add Employee{% endblock title %}
 
 {% block body %}
+<div class="container">
 <div id="box">
 <div class="box">
 <form action="/addpat" method="POST">
@@ -49,19 +50,29 @@
     <input type="password" class="form-control" id="pid2" name="pid2" placeholder="Enter your password again" required>
   </div>
  
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary my-3">Submit</button>
 </form>
 </div>
 </div>
 
-{% for uu in u %}
-  {{uu.Name}}
-  {{uu.username}}
-  {{uu.group}}
-  <br>
-  <a href="/delCS/{{uu.username}}">delete</a>
-  <hr>
+
+  {% for uu in u %}
+<div class="card my-2">
+  <div class="card-header">
+    {{uu.Name}}
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">{{uu.username}}</h5>
+    <a href="/delCS/{{uu.username}}" class="btn btn-danger">Delete</a>
+  </div>
+</div>
+ 
+  
+  
+ 
   {% endfor %}
+
+</div>
 
 
  {% endblock %}
