--- a/templates/home/password_reset_done.html
+++ b/templates/home/password_reset_done.html
@@ -1,6 +1,14 @@
+{% extends 'base.html' %}
+
+{% block title %}Donors{% endblock title %}
+
+{% block body %}
+
 
 <h3>Password reset complete</h3>
 
 <p>Your password has been set. You may go ahead and log in now.</p>
 
-<a href="/login">Log in</a>
+<a href="/login" class="btn btn-warning">Log in</a>
+
+ {% endblock %}
