--- a/templates/home/password_reset_sent.html
+++ b/templates/home/password_reset_sent.html
@@ -1,6 +1,15 @@
-<h3>Password reset sent</h3>
+{% extends 'base.html' %}
+
+{% block title %}Donors{% endblock title %}
+
+{% block body %}
+<div class="container">
+
+<h2>Password reset sent</h2>
 
 
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+<p>We’ve emailed you instructions for setting your <b>password</b> , if an account exists with the email you entered. You should receive them shortly.</p>
 
 <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+</div>
+ {% endblock %}
