--- a/templates/home/loginpage.html
+++ b/templates/home/loginpage.html
@@ -46,8 +46,8 @@
             <input type="password" name="upassword" class="form-control" id="exampleInputPassword1">
           </div>
 
-          <button type="submit" class="btn btn-primary">Submit</button>
-          <a href="/reset_password" class="btn btn-warning">Delete</a>
+          <button type="submit" class="btn btn-primary">Login</button>
+          <a href="/reset_password" class="btn btn-warning">Forget password</a>
         </form>
       </div>
     </div>
