--- a/templates/base.html
+++ b/templates/base.html
@@ -164,7 +164,7 @@
         // console.log(event);
         mouse.x = event.x;
         mouse.y = event.y;
-        console.log(mouse);
+       // console.log(mouse);
     })
 
     // fucntion for making circles 
