--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -8,7 +8,27 @@
 
 
 {% block body %}
-<div id="cases"></div>
+
+<h2>Enter your Order Id and Email address to track your order</h2>
+<form method="post" action="#" id="search">{% csrf_token %}
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputname">Order Id</label>
+            <input type="text" class="form-control" id="orderId" name="orderId" placeholder="Order Id">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+        </div>
+        <button type="submit" class="btn btn-primary">Track Order</button>
+    </div>
+</form>
+
+
+<div id="cases">
+
+
+</div>
 
 
 
@@ -18,22 +38,19 @@
 <script>
 
 
-fetch('https://api.covid19india.org/state_district_wise.json')
-.then(response => response.json())
-.then((data) => {
-show(data);
-})
-.catch(error => console.error(error))
+    fetch('https://api.covid19india.org/state_district_wise.json')
+        .then(response => response.json())
+        .then((data) => {
+            show(data);
+        })
+        .catch(error => console.error(error))
 
 
-var show = function show(d) {
-  console.log(d);
-  
-}
+    var show = function show(d) {
+        d1 = JSON.stringify(d)
+        console.log(d1);
 
-
-
-
+    }
 
 
 
@@ -46,7 +63,11 @@ var show = function show(d) {
 
 
 
-  
+
+
+
+
+
 </script>
 
 {% endblock js %}
