--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -12,8 +12,8 @@
     .Heading {
         color: rgb(255, 0, 0);
         text-align: center;
-        padding: 40px;
-        font-size: 90px;
+        padding: 12vh;
+        font-size: 7vw;
         font-family: 'Times New Roman', Times, serif;
     }
 
